131: profile for Jacoco and restructured surefire
Task-Url: https://github.com/eclipse/xsemantics/issues/131